# bncsv

./: .gitignore  Cargo.toml  README.md  data.csv
.github/workflows/: build.yml
bindings/py/: .gitignore  Cargo.toml  MANIFEST.in  pyproject.toml
bindings/py/bncsv_py/: __init__.py  __init__.pyi
bindings/py/src/: lib.rs
bindings/py/tests/: test_convert.py
bncsv-core/: Cargo.toml
bncsv-core/src/: compr.rs  lib.rs  main.rs
bncsv-core/src/cli/: io.rs  mod.rs  multithread.rs  utils.rs  validation.rs
bncsv-core/src/fmt/: utf8.rs
bncsv-core/src/utils/: iterators.rs  mod.rs  paths.rs
bncsv-core/tests/: e2e.rs
cmds/: build-env.sh  build.sh  test.sh
