[package]
name = "bncsv-core"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
argh = {workspace=true, optional=true}
glob = {workspace=true, optional=true}

[features]
default= []
cli = ["dep:argh", "dep:glob"]
multithreading = ["cli"]
[dev-dependencies]
assert_cmd = "2.0.16"
assert_fs = "1.1.2"
predicates = "3.1.2"
rand = "0.8.5"

#[lib]
#name="bncsv-core"

[[bin]]
name = "bncsv"
path = "src/main.rs"

